[gd_scene load_steps=4 format=3 uid="uid://ditawypuxmnay"]

[ext_resource type="Script" path="res://scenes/game/menus/pause_menu.gd" id="1_8imfs"]
[ext_resource type="Texture2D" uid="uid://bcno48rp6yvns" path="res://assets/sprites/ui/utils/button/normal.png" id="1_j52cy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_77tht"]
texture = ExtResource("1_j52cy")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_8imfs")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0.88, 0.88, 0.88, 0.431373)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -34.0
offset_right = 67.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_77tht")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "UI.PAUSE.RESUME"

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "UI.PAUSE.RESTART"

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 36
text = "UI.PAUSE.EXIT"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit"]
